--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Ziheng''s Homepage # Website name
+title: Ziheng's Homepage # Website name
 baseurl: 'https://ziheng0805.netlify.app/' # Website URL
 copyright: '© {2021} Mr.Duan' # Footer text, e.g. '© {year} Me'
 
