--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -145,7 +145,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
+  google_analytics: 'G-XZ9TJ9M2BK'
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
@@ -156,6 +156,3 @@ cms:
 icon:
   pack:
     ai: true
-    
-[marketing]
-  google_analytics = "G-XZ9TJ9M2BK"
