--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,23 +20,23 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: duanziheng1206@gmail.com
+phone: (+86) 13393470805
 address:
-  street: 450 Serra Mall
-  city: Stanford
+  street: None
+  city: Irvine
   region: CA
-  postcode: '94305'
+  postcode: '92697'
   country: United States
   country_code: US
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+  latitude: '33.3844'
+  longitude: '-117.5033'
+directions: None
 office_hours:
   - 'Monday 10:00 to 13:00'
   - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+appointment_url: ''
 contact_links:
   - icon: twitter
     icon_pack: fab
@@ -156,3 +156,8 @@ cms:
 icon:
   pack:
     ai: true
+search:
+  engine: 1
+  search.wowchemy:
+    min_length: 1 
+    threshold: 0.3
