--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,6 +8,22 @@ main:
     url: '#about'
     weight: 10
     
+  - name: Publications
+    url: '#publication'
+    weight: 20
+
+  - name: Preprints
+    url: '#preprint'
+    weight: 30
+    
+  - name: Talks
+    url: '#talks'
+    weight: 40
+    
+  - name: Contact
+    url: '#contact'
+    weight: 50
+
 #   - name: Posts
 #     url: '#posts'
 #     weight: 20
@@ -15,17 +31,6 @@ main:
 #     url: '#projects'
 #     weight: 30
 
-  - name: Publications
-    url: '#publications'
-    weight: 20
-    
-  - name: Talks
-    url: '#talks'
-    weight: 30
-    
-  - name: Contact
-    url: '#contact'
-    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
