--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,14 +11,18 @@ main:
   - name: Publications
     url: '#publication'
     weight: 20
-    
+  
+  - name: Blogs
+    url: '#blogs'
+    weight: 30
+
   - name: Talks
     url: '#talks'
-    weight: 30
+    weight: 40
     
   - name: Contact
     url: '#contact'
-    weight: 40
+    weight: 50
 
 #   - name: Posts
 #     url: '#posts'
