--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -132,13 +132,15 @@ comments:
     show_count: true
   commento:
     url: ''
-search:
-  provider: wowchemy
-  algolia:
-    app_id: ''
-    api_key: ''
-    index_name: ''
-    show_logo: false
+features:
+  search:
+    # provider: wowchemy
+    provider: algolia
+    algolia:
+      app_id: '6LO1K9TATE'
+      api_key: 'da8b38fd527343705be3f13934a483fc'
+      index_name: 'web'
+      show_logo: true
 map:
   provider: ''
   api_key: ''
