--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -12,9 +12,9 @@ main:
     url: '#publication'
     weight: 20
   
-  - name: Blogs
-    url: '#blogs'
-    weight: 30
+#   - name: Blogs
+#     url: '#blogs'
+#     weight: 30
 
   - name: Talks
     url: '#talks'
